--- a/app/assets/stylesheets/custom.cs.scss
+++ b/app/assets/stylesheets/custom.cs.scss
@@ -3,10 +3,9 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-body {
+//body {
     // Gradient from http://uigradients.com/# by @_ighosh
-    background: #3a6186; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #3a6186 , #89253e); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #3a6186 , #89253e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
-}
+  //  background: #3a6186; /* fallback for old browsers */
+    //background: -webkit-linear-gradient(to left, #3a6186 , #89253e); /* Chrome 10-25, Safari 5.1-6 */
+    //background: linear-gradient(to left, #3a6186 , #89253e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+//}
