--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
       <div class ="col-md-6">
         <div class="well">
           <h2 class="text-center">Create your profile</h2>
-          <h4 class="text-center">Show the DevMatch community what you're made of and what projects you've been a part of.</h4>
+          <h4 class="text-center">Show the DevMatch community what you're made of!</h4>
           <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-primary btn-lg btn-block'%>
         </div>
       </div>
