--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,3 +8,26 @@
     background-color: #337ab7;
     text-align: center;
 }
+
+.well.profile-block{
+    color: #fff;
+    h3{
+        margin-top: 0px;
+    }
+    
+}
+.profile-description {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+    
+}
+.contact-info {
+    background-color: #5bc0de;
+    border-color:#45b8da;
+}
+    
+.profile-pic {
+    -webkit-box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
+}
