--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
       <div class="well">
         <h2 class="text-center">The Community</h2>
         <h4 class="text-center">Visit the community and see who you can build something with!</h4>
-        <%= link_to "View the Community!", "#", class: 'btn btn-primary btn-lg btn-block' %>
+        <%= link_to "View the Community!", users_path, class: 'btn btn-primary btn-lg btn-block' %>
       </div>
     </div>
   <% else %>
