--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,4 @@
+/* users show styles*/
 .job-title-icon {
     width: 30px;
     height: 30px;
@@ -26,8 +27,18 @@
     border-color:#45b8da;
 }
     
-.profile-pic {
-    -webkit-box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 4px -2px rgba(0,0,0,0.75);
+.profile-show-pic {
+    -webkit-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.75);
+}
+
+/* Users index styles*/
+.well.white-bg {
+    background-color : #fff;
+}
+
+
+.index-pic {
+    border-radius: 50%;
 }
