--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-3 text-center">
-        <%= image_tag @user.profile.avatar.url(:medium), class: "profile-pic" %> <br/>
+        <%= image_tag @user.profile.avatar.url(:medium), class: "profile-show-pic" %> <br/>
     </div>
     <div class="col-md-6">
         <h1><%= @user.profile.first_name%> <%= @user.profile.last_name %></h1>
