Added helpful improvements to the Contact Us page, the about page, and the COmmunity page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,7 @@
 <h2>About me</h2>
+<h3>Welcome to Dev Match! The Software as a Service example site coded by Cameron Blair!</h3>
+<p>This site is written to function as a social media platform for developers, entrepreneurs, and investors to find each other and organize new work!</p>
+<p>The site is coded with Ruby on Rails and features object focused programming.</p>
+<p>Each user belongs to either the basic or pro plan. Giving users access to the community at a limited and complete level respectively.</p>
+<p>Using the Stripe Gem the site is able to verify each users credit card information without the host of the site seeing the information at all.</p>
+<p>To process and take in new users and profiles, the Devise gem is implemented so as to streamline the code and manufacture of the site.</p>
