--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
+        <h1 class="text-center">Welcome to the Dev Match Community!</h1>
+        <p class="text-center">Below you will find every member that is a part of our community, their profile plan, their job title!</p>
+        <p class="text-center">Click on their name to head to their profile and find out more.</p> </br>
             <ul class="list-unstyled">
                 <% @users.each do |user|%>
                     <% if user.profile %>
